syntax = "proto3";
option csharp_namespace = "GrpcCServer";

package persons;

//import "personcls.proto";
import "google/protobuf/any.proto";

service GetPersonService{
  rpc GetPerson(PersonIdReq) returns (PersonResp);
}

message PersonIdReq{
  int32 id = 1;
}

message PersonClss{
  int32 Id = 1;
  string Ad = 2;
  string Soyad = 3;
  int32 Yas = 4;
}

message PersonResp{
  //google.protobuf.Any person = 1;
  PersonClss person = 1;
}